tools/architecture/validate-source-imports/tests/fixtures/invalid/package-cycle/packages/pkg-alpha/src/index.ts
import { bar } from "@platform/pkg-beta";
export const alpha = `alpha+${bar}`;
